Enhancements to the interface, Split View Multitasking support and iPad Pro compatibility.

--- a/Marguerite.xcodeproj/xcshareddata/xcschemes/Marguerite.xcscheme
+++ b/Marguerite.xcodeproj/xcshareddata/xcschemes/Marguerite.xcscheme
@@ -20,34 +20,6 @@
                ReferencedContainer = "container:Marguerite.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "14CE0C951B30E53F00AF27DC"
-               BuildableName = "MargueriteTests.xctest"
-               BlueprintName = "MargueriteTests"
-               ReferencedContainer = "container:Marguerite.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "140782761B5CA038009070AF"
-               BuildableName = "Marguerite Scrap Tests.xctest"
-               BlueprintName = "Marguerite Scrap Tests"
-               ReferencedContainer = "container:Marguerite.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -56,26 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "14CE0C951B30E53F00AF27DC"
-               BuildableName = "MargueriteTests.xctest"
-               BlueprintName = "MargueriteTests"
-               ReferencedContainer = "container:Marguerite.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "140782761B5CA038009070AF"
-               BuildableName = "Marguerite Scrap Tests.xctest"
-               BlueprintName = "Marguerite Scrap Tests"
-               ReferencedContainer = "container:Marguerite.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
@@ -90,7 +42,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
